# LGBench

./: .gitignore  README.md  config.json  main.py  pyproject.toml
benches/charset_normalizer/: run.py
benches/nxe/: run.py
benches/ppl/: run.py
benches/prompt/: run.py
data/all_samples/: euc_kr_pos.json
data/dataset/LGBench/: big5.json  euc_jp.json  euc_kr.json  gbk.json  shift_jis.json
data/dataset/LGBench_mini/: big5_mini.json  euc_jp_mini.json  euc_kr_mini.json  gbk_mini.json  shift_jis_mini.json
data/raw/: THUOCL_all.txt  translations_CJK.json
data/samples/: big5_pos.json  euc_jp_pos.json  gbk_pos.json  shift_jis_pos.json
data/threshold_samples/: big5_neg_0_2.json  big5_pos_0_2.json  euc_jp_neg_0_2.json  euc_jp_pos_0_2.json  euc_kr_neg_0_2.json  euc_kr_pos_0_2.json  gbk_neg_0_2.json  gbk_pos_0_2.json  shift_jis_neg_0_2.json  shift_jis_pos_0_2.json
data/threshold_samples_25/: big5_neg_samples.json  big5_pos_samples.json  euc_jp_neg_samples.json  euc_jp_pos_samples.json  euc_kr_neg_samples.json  euc_kr_pos_samples.json  gbk_neg_samples.json  gbk_pos_samples.json  shift_jis_neg_samples.json  shift_jis_pos_samples.json
data/threshold_samples_30/: euc_jp_neg_samples.json  euc_jp_pos_samples.json  euc_kr_neg_samples.json  euc_kr_pos_samples.json  gbk_neg_samples.json  gbk_pos_samples.json  shift_jis_neg_samples.json  shift_jis_pos_samples.json
src/: nxe.py
src/data_pipeline/: classify_samples.py  clean.py  encfinder.py  extract_samples.py  translate.py
src/utils/: enc_utils.py  openai_utils.py  stat_utils.py
